--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,6 +11,40 @@
 </head>
 <body>
 
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="pokedex">
+                <img src="/images/icons/pokeball.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                Pokedex
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="trainers">
+                <img src="/images/icons/player.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                Trainers
+            </a>
+        </li>
+    </ul>
+
+    {{#user}}
+    <span class="navbar-text mr-md-3">Welcome {{username}}</span>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="profile">
+                <img src="/images/icons/player.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                My Profile
+            </a>
+        </li>
+    </ul>
+    <form class="form-inline" action="/logout" method="post">
+        <input type="submit" class="btn btn-outline-warning my-2 my-sm-0" value="Sign Out"/>
+        <input type="hidden" name="{{_csrf.parameterName}}" value="{{_csrf.token}}"/>
+    </form>
+    {{/user}}
+</nav>
+
 <div class="container">
     <h1 class="pt-md-5 pb-md-5">Pokemon Trainer - Welcome {{name}}</h1>
 
@@ -36,8 +70,8 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
