--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,8 +34,36 @@
     {{/user}}
 </nav>
 
+<div class="container">
+    <h1 class="pt-md-5 pb-md-5">Trainer : {{trainer.name}} </h1>
+
+    <div class="card-deck">
+        {{#trainer.team}}
+        <div class="col-md-3">
+            <div class="card shadow-sm mb-3">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal" style="text-transform: capitalize;">{{type.name}}
+                        <span class="badge badge-secondary">Level {{level}}</span>
+                    </h4>
+                </div>
+                <img class="card-img-top" src="{{type.sprites.front_default}}" alt="Pokemon"/>
+                <div class="card-body">
+                    <span class="badge badge-primary">Speed : {{type.stats.speed}}</span>
+                    <span class="badge badge-primary">Attack : {{type.stats.attack}}</span>
+                    <span class="badge badge-primary">Defense : {{type.stats.defense}}</span>
+                    <span class="badge badge-primary">HP : {{type.stats.hp}}</span>
+                </div>
+            </div>
+        </div>
+        {{/trainer.team}}
+    </div>
+
+
+</div>
 
 </body>
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
