--- a/src/main/resources/templates/trainer.html
+++ b/src/main/resources/templates/trainer.html
@@ -23,7 +23,7 @@
     <span class="navbar-text mr-md-3">Welcome {{username}}</span>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="profile">
+            <a class="nav-link" href="../profile">
                 <img src="/images/icons/player.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 My Profile
             </a>
